--- a/ТПР.ipynb
+++ b/ТПР.ipynb
@@ -3,9 +3,7 @@
   "nbformat_minor": 0,
   "metadata": {
     "colab": {
-      "provenance": [],
-      "authorship_tag": "ABX9TyN757rzqgW6Fwa+0IUSEOLP",
-      "include_colab_link": true
+      "provenance": []
     },
     "kernelspec": {
       "name": "python3",
@@ -19,8 +17,7 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
+        "id": "view-in-github"
       },
       "source": [
         "<a href=\"https://colab.research.google.com/github/peacedukej/TPR-TASK-2/blob/task1/%D0%A2%D0%9F%D0%A0.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
@@ -110,7 +107,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "VhRNiTAherGR"
       },
@@ -141,9 +138,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "YOvXqp3Se_8s",
-        "outputId": "27589784-4eb0-488f-b46c-37128b454682"
+        "outputId": "8b1d7e44-24bc-44b5-f324-c31c2f3833a4"
       },
-      "execution_count": 2,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -215,9 +212,9 @@
           "height": 606
         },
         "id": "xNPSxt4BfETO",
-        "outputId": "eaba85e9-7ecf-48ba-d2cd-4a213b380641"
+        "outputId": "ee3bfa1f-e31f-4843-8812-a5ccdf1921e0"
       },
-      "execution_count": 3,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "display_data",
@@ -252,9 +249,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "3pp87ZItfJD1",
-        "outputId": "ec1b162a-2688-4d73-db98-021b191da7fb"
+        "outputId": "3549b66f-2f4c-45d6-b2fe-6c07b1b230a9"
       },
-      "execution_count": 4,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -280,12 +277,121 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
+      "source": [
+        "## Онлайн градиентный спуск (8 баллов)\n",
+        "\n",
+        "Приведите выражение для градиента функции $f_t(x)$ и запишите явную формулу для итерации OGD. **[1 балл]**"
+      ],
+      "metadata": {
+        "id": "W84LltmybcPw"
+      }
+    },
+    {
+      "cell_type": "markdown",
       "source": [],
+      "metadata": {
+        "id": "4UEy1tL4bcux"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Для задачи формирования портфеля ценных бумаг, функция потерь f_t(x) может быть определена как отрицательный логарифмический прирост портфеля:\n",
+        "\n",
+        "f_t(x) = -ln(x^T * r_t),\n",
+        "\n",
+        "где x - вектор распределения средств между активами, r_t - вектор рыночных доходностей в момент времени t.\n",
+        "\n",
+        "Чтобы выразить градиент функции потерь f_t(x) по x, нам нужно найти производную функции потерь по каждому компоненту вектора x:\n",
+        "\n",
+        "∇f_t(x) = [∂f_t(x)/∂x_1, ∂f_t(x)/∂x_2, ..., ∂f_t(x)/∂x_d],\n",
+        "\n",
+        "где d - размерность вектора x (количество активов в портфеле).\n",
+        "\n",
+        "Вычисляем производную для каждого компонента:\n",
+        "\n",
+        "∂f_t(x)/∂x_i = -1 * (1 / (x^T * r_t)) * r_{t,i},\n",
+        "\n",
+        "где r_{t,i} - i-й компонент вектора r_t.\n",
+        "\n",
+        "Таким образом, градиент функции потерь f_t(x) имеет следующий вид:\n",
+        "\n",
+        "∇f_t(x) = - (r_t / (x^T * r_t)).\n",
+        "\n",
+        "Теперь мы можем записать явную формулу для итерации Оnline Gradient Descent (OGD):\n",
+        "\n",
+        "x_{t+1} = Proj(Δ^d)(x_t + η * (r_t / (x_t^T * r_t))),\n",
+        "\n",
+        "где η - коэффициент скорости обучения (learning rate), Proj(Δ^d) - оператор проекции на стандартный симплекс Δ^d.\n",
+        "\n",
+        "Важно отметить, что после каждой итерации OGD, мы должны проецировать обновленный вектор x на стандартный симплекс, чтобы получить допустимое распределение средств между активами."
+      ],
+      "metadata": {
+        "id": "IUz-hqPabfzZ"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Реализуйте инвестора, принимающего решение на основе итераций онлайн \n",
+        "градиентного спуска. **[4 балла]**\n",
+        "\n",
+        "Используйте готовую функцию `simplex_projection`, проектирующую входной вектор на стандартный симплекс."
+      ],
+      "metadata": {
+        "id": "4uiKKTHmbimw"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def _unsafe_simplex_projection(s: ArrayLike, norm_constraint: float) -> ArrayLike:\n",
+        "    \"\"\"Находит проекцию на симплекс.\"\"\"\n",
+        "    u = np.sort(s)[::-1]\n",
+        "    cssv = np.cumsum(u)\n",
+        "    rho = np.nonzero(u * np.arange(1, len(u) + 1) > (cssv - norm_constraint))[0][-1]\n",
+        "    theta = (cssv[rho] - norm_constraint) / (rho + 1.0)\n",
+        "    return np.maximum(s - theta, 0)\n",
+        "\n",
+        "\n",
+        "def simplex_projection(s: ArrayLike):\n",
+        "    \"\"\"Возвращает проекцию на единичный симплекс.\"\"\"\n",
+        "    return s if np.sum(s) == 1 else _unsafe_simplex_projection(s, 1.0)"
+      ],
       "metadata": {
         "id": "_Gva82v-fSuv"
       },
-      "execution_count": null,
+      "execution_count": 6,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "def online_gradient_descent_investor(market_returns, learning_rate=0.01, epsilon=1e-8):\n",
+        "    num_assets = market_returns.shape[1]\n",
+        "    num_days = market_returns.shape[0] -1\n",
+        "\n",
+        "    x = np.ones(num_assets) / num_assets\n",
+        "    x_history = [x.copy()]\n",
+        "    for t in range(num_days):\n",
+        "        # Получение вектора рыночных доходностей для текущего дня\n",
+        "        r_t = market_returns.iloc[t].values\n",
+        "\n",
+        "        # Выполнение итерации онлайн градиентного спуска\n",
+        "        gradient = - (r_t / (np.dot(x, r_t) + epsilon))\n",
+        "        x += learning_rate * gradient\n",
+        "\n",
+        "        # Обновление вектора распределения средств с использованием проекции на стандартный симплекс\n",
+        "        x = simplex_projection(x)\n",
+        "        x_history.append(x.copy())\n",
+        "\n",
+        "    return np.array(x_history)"
+      ],
+      "metadata": {
+        "id": "6nQlDcFZbuVH"
+      },
+      "execution_count": 7,
       "outputs": []
     }
   ]
